2003-06-22 Araki Ken <arakiken@users.sf.net>

	* 'make distclean' failed. Fixed.
	  (Thanks to Kubota Tomohiro san)

2003-06-21 Araki Ken <arakiken@users.sf.net>

	* kik_conf_io_write() could misunderstand a value string
	  as its key string. Fixed.

2003-06-21 Araki Ken <arakiken@users.sf.net>

	* In some cases, combining characters couldn't be drawn. Fixed.
	  (Thanks to Kubota Tohomiro san)

2003-06-15 Tomohiro KUBOTA <kubota@debian.org>

	* A typo in doc/en/PROTOCOL.

2003-06-14 Araki Ken <arakiken@users.sf.net>

	* Released 2.7.0
	  (rel-2_7_0)

2003-06-14 Tomohiro KUBOTA <kubota@debian.org>

	* Update mlterm.1 for "proto:" prefix.
	* Tiny typo fixes.

2003-06-13 Araki Ken <arakiken@users.sf.net>

	* Supported "proto:" prefix which is a part of shortcut key string
	  and designates its following string as mlterm configuration
	  protocol.

2003-06-13 Araki Ken <arakiken@users.sf.net>

	* If pty device not opened, mlterm died. Fixed.
	  (Thanks to Minami Hirokazu san)

2003-06-11  MINAMI Hirokazu  <minami@mistfall.net>

	* Don't free color cells even if mlterm was compiled with Xft.

2003-06-09 Seiichi SATO <ssato@sh.rim.or.jp>

	* Changed parse_xft_font_name() to allow XftFont name to include
	  hyphens, e.g. "Foo\-Bold-iso10646-1"
	  (Thanks to Ambrose Li)

2003-06-08 Araki Ken <arakiken@users.sf.net>(1.449)

	* Rewritten documentations(doc/en/*,doc/ja/*)

2003-06-08 Araki Ken <arakiken@users.sf.net>

	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=196228 fixed.
	  (Thanks to Sato Seiichi san)
	* Available '\n','\r','\e','\n' chars in key config file.

2003-06-05  MINAMI Hirokazu  <minami@mistfall.net>

	* Icon handling is re-designed.
	 - do not hinder window property anymore
	 - smaller memory consumption
	(Thanks to  Tatsuya Kinoshita san and Seiichi SATO san) 
	
2003-06-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* Added $CPPFLAGS to CFLAGS.

2003-06-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* Fixed a problem with occuring an incorrect size hint when changing